--- a/leavesystem/calendar.html
+++ b/leavesystem/calendar.html
@@ -1,52 +1,81 @@
 <div class="text-center">
-  <label class="mb-2">เลือกเดือน:</label>
-  <select id="monthSelect" onchange="renderCalendar()" class="form-select w-auto d-inline-block">
-    <option value="0">มกราคม</option>
-    <option value="1">กุมภาพันธ์</option>
-    <option value="2">มีนาคม</option>
-    <option value="3">เมษายน</option>
-    <option value="4">พฤษภาคม</option>
-    <option value="5">มิถุนายน</option>
-    <option value="6">กรกฎาคม</option>
-    <option value="7">สิงหาคม</option>
-    <option value="8">กันยายน</option>
-    <option value="9">ตุลาคม</option>
-    <option value="10">พฤศจิกายน</option>
-    <option value="11">ธันวาคม</option>
-  </select>
+    <label class="mb-2">เลือกเดือน:</label>
+    <select id="monthSelect" onchange="renderCalendar()" class="form-select w-auto d-inline-block">
+        <option value="0">มกราคม</option>
+        <option value="1">กุมภาพันธ์</option>
+        <option value="2">มีนาคม</option>
+        <option value="3">เมษายน</option>
+        <option value="4">พฤษภาคม</option>
+        <option value="5">มิถุนายน</option>
+        <option value="6">กรกฎาคม</option>
+        <option value="7">สิงหาคม</option>
+        <option value="8">กันยายน</option>
+        <option value="9">ตุลาคม</option>
+        <option value="10">พฤศจิกายน</option>
+        <option value="11">ธันวาคม</option>
+    </select>
 </div>
 
 <div class="table-responsive mt-3 d-flex justify-content-center">
-  <table class="table table-bordered w-auto text-white">
-    <thead class="table-secondary text-dark">
-      <tr>
-        <th>วันที่</th>
-        <th>ชื่อผู้ลาที่ลงทะเบียนไว้</th>
-      </tr>
-    </thead>
-    <tbody id="calendarBody"></tbody>
-  </table>
+    <table class="table table-bordered w-auto text-white">
+        <thead class="table-secondary text-dark">
+            <tr>
+                <th>Date</th>
+                <th>Name</th>
+                <th>Date</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody id="calendarBody"></tbody>
+    </table>
 </div>
 
 <script>
   function renderCalendar() {
     const month = document.getElementById('monthSelect').value;
-    google.script.run.withSuccessHandler(function(data) {
+    google.script.run.withSuccessHandler(function (data) {
       const tbody = document.getElementById('calendarBody');
       tbody.innerHTML = '';
-      for (let i = 1; i <= 31; i++) {
-        if (!data[i]) continue;
+      const maxDay = new Date(new Date().getFullYear(), parseInt(month) + 1, 0).getDate(); // หาจำนวนวันสุดท้ายของเดือน
+
+      for (let i = 1; i <= 15; i++) {
         const tr = document.createElement('tr');
-        const tdDate = document.createElement('td');
-        tdDate.textContent = i;
-        const tdName = document.createElement('td');
-        tdName.innerHTML = data[i].join('<br>');
-        tr.appendChild(tdDate);
-        tr.appendChild(tdName);
+        const tdDate1_15 = document.createElement('td');
+        tdDate1_15.textContent = i;
+        const tdName1_15 = document.createElement('td');
+        let names1_15 = [];
+        if (data[i]) {
+          data[i].forEach(item => {
+            names1_15.push(`${item.name} (${item.type})`); // แสดงชื่อ (ชนิดการลา)
+          });
+        }
+        tdName1_15.innerHTML = names1_15.join('<br>');
+
+        const tdDate16_31 = document.createElement('td');
+        if (i + 15 <= maxDay) { // Check if day exists
+          tdDate16_31.textContent = i + 15;
+        }
+        const tdName16_31 = document.createElement('td');
+        let names16_31 = [];
+        if (data[i + 15]) {
+          data[i + 15].forEach(item => {
+            names16_31.push(`${item.name} (${item.type})`); // แสดงชื่อ (ชนิดการลา)
+          });
+        }
+        tdName16_31.innerHTML = names16_31.join('<br>');
+
+        tr.appendChild(tdDate1_15);
+        tr.appendChild(tdName1_15);
+        tr.appendChild(tdDate16_31);
+        tr.appendChild(tdName16_31);
         tbody.appendChild(tr);
       }
     }).getCalendarData(Number(month));
   }
+
+  // กำหนดเดือนปัจจุบันเป็นค่าเริ่มต้น
+  const currentMonth = new Date().getMonth();
+  document.getElementById('monthSelect').value = currentMonth;
 
   renderCalendar();
 </script>
