--- a/leavesystem/head.html
+++ b/leavesystem/head.html
@@ -1,6 +1,5 @@
-<!-- head.html -->
-<!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <style>
   body {
@@ -15,5 +14,25 @@
   h1, h2 {
     text-align: center;
     margin-top: 30px;
+  }
+
+  /* CSS เพิ่มเติมสำหรับ Modal เพื่อแก้ไขสี */
+  .modal-content {
+    background-color: #f8f9fa !important; /* สีพื้นหลังอ่อน */
+    color: #212529 !important; /* สีตัวอักษรเข้ม */
+  }
+  .modal-title {
+    color: #212529 !important;
+  }
+  .modal-body {
+    color: #212529 !important;
+  }
+  .modal-footer .btn-secondary {
+    background-color: #6c757d !important;
+    color: white !important;
+  }
+  .modal-footer .btn-danger {
+    background-color: #dc3545 !important;
+    color: white !important;
   }
 </style>
